# SFILES2

./: .gitignore  LICENSE  README.md  Read_ctrl_patterns.py  TestSFILESctrl.py  data_augmentation.py  demonstration.ipynb  pyproject.toml  requirements.txt  run_demonstration.py  run_demonstration_ctrl.py
ControlPatterns/: add_reactor_feed_pattern_1.json  add_reactor_feed_pattern_2.json  column_pattern_1.json  column_pattern_2.json  column_pattern_3.json  column_pattern_4.json  column_pattern_5.json  column_pattern_6.json  column_pattern_7.json  heatexchanger_pattern_1.json  heatexchanger_pattern_2.json  heatexchanger_pattern_3.json  heatexchanger_pattern_4.json  mixing_pattern_1.json  mixing_pattern_2.json  mixing_pattern_3.json  mixing_pattern_4.json  pump_pattern_1.json  pump_pattern_2.json  pump_pattern_3.json  reactor_pattern_1.json  reactor_pattern_2.json  splitting_pattern_2.json
Flowsheet_Class/: OntoCape_SFILES_mapping.py  README.md  flowsheet.py  nx_to_sfiles.py  run_demonstration.py  utils_visualization.py
Flowsheet_Class/RandomFlowsheetGen_OC/: Test_flowsheet_generator.py  patterns.py  random_flowsheet_generator.py  random_flowsheet_generator_ctrl.py  unit_operations.py
Flowsheet_Class/plots/: readme.txt
Real_flowsheets/: test_and_load_new_data.py
Real_flowsheets/DWSim_pickle_files/: DWSim_106_NaturalGasProcessing.pkl  DWSim_132_Process_Flowsheet_DMF.pkl  DWSim_134_PGMME_Process_Flowsheet_v8_9_08_2017.pkl  DWSim_143_dealkylation_1.pkl  DWSim_161_WGSR.pkl  DWSim_202_Flowsheet_PSD.pkl  DWSim_29_braytonflowsheet.pkl  DWSim_48_Ethyleneglycol.pkl  (+2 more)
